--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ p{padding: 10px; }
   
   
 <div class="container">
-<section id="section1"><img src="1.png" width="110"  height="110">
+<section id="section1"><img src="1.jpg" width="110"  height="110">
 </section>
 
 <section id="section2"><center><h2 id="titulo">JHSISMOSMX</h2></center>
